[project]
name = "pylightningfx"
version = "0.1.0"
description = "Python client for bitFlyer Lightning API"
authors = [
    { name = "ykus4", email = "a2gwhitex@icloud.com" }
]
license = "MIT"
readme = "README.md"
keywords = ["bitflyer", "bitcoin", "crypto", "trading", "api"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Topic :: Office/Business :: Financial",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
requires-python = ">=3.13"
dependencies = [
    "httpx>=0.28.1",
    "pydantic>=2.13.4",
]

[project.urls]
Homepage = "https://github.com/ykus4/pylightningfx"
Documentation = "https://ykus4.github.io/pylightningfx"
Repository = "https://github.com/ykus4/pylightningfx"
"Bug Tracker" = "https://github.com/ykus4/pylightningfx/issues"

[build-system]
requires = ["uv_build>=0.11.2,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.7.6",
    "mkdocs-static-i18n>=1.3.1",
    "pre-commit>=4.6.0",
    "pytest>=9.0.3",
    "ruff>=0.15.14",
]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
